Bug 1335705 - For Gtk > 3.20 determine scale trough size from trough CSS node and also add border/padding/margin, r=karlt

MozReview-Commit-ID: BhS9xkagvMp